<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FuzzFit</string>
    <string name="action_settings">Settings</string>
    <!--  MainActivity   -->
        <string name="before_start">Please register yourself before we start.</string>
    <!--  XML   -->
    <string name="register_update_user">Register/Update</string>
    <string name="walker_main">Walker</string>
    <string name="runner_main">Runner</string>
    <string name="weight_loss_main">Weight Loss</string>
    <string name="report_main">View Report</string>
    
   
    <!--  RegisterUserActivity   -->
    <!--  XML   -->
    <string name="age_register_user">Age: </string>
    <string name="weight_register_user">Weight (kg): </string>
    <string name="height_register_user">Height (cm): </string>
    <string name="sex_register_user">Select sex</string>
    <string name="finish_register_user">Finish</string>
    <string name="register_user_title">Register</string>
    <string name="select_sex">Select Sex</string>
    <string name="select_sex_male">Male</string>
    <string name="select_sex_female">Female</string>
    <!--  Java   -->
    <string name="registration_confirmation">Your data has been successfully registered.</string>
    <string name="update_confirmation">Your data has been successfully updated.</string>
    
    <!--  EnterActivityActivity   -->
    <!--  XML   -->
    <string name="recommendation_enter">Recommendation:  </string>
    <string name="walking_recommendation_time">Please make sure to also walk for at least 30 to 60 minutes.  </string>
        <string name="running_recommendation_distance">Try to reach a distance of </string>
    <string name="time_recommendation_enter">Time (minutes):</string>
    <string name="distance_recommendation_enter">Distance (meters):</string>
    <string name="change_recommendation_enter">Change recommendation:</string>
    <string name="change_button_recommendation_enter">Change</string>
    <string name="enter_button_recommendation_enter">Enter</string>
    <string name="open_pedometer_button_recommendation_enter">Open Pedometer</string>
    <!--  Java   -->
    <string name="text_view_next_recommendation_enter">Next Recommendation: </string>
	<string name="text_view_recommendation_time_enter">minutes</string>
    <string name="text_view_recommendation_distance_enter">meters</string>
    <string name="text_view_recommendation_distance_km_enter">km in </string>        
 	<string name="text_view_recommendation_calories_enter"> calories</string>
 	<string name="enter_walker_title"> Walker Training</string>
 	<string name="enter_runner_title"> Runner Training</string>
 	<string name="enter_weight_loss_title"> Weight Loss Program</string>

    
    <!--  PedometerActivity   -->
    <!--  XML   -->
    <string name="recommendation_pedometer">Recommendation</string>
    <string name="reset_steps_button_pedometer">Reset Steps</string>
    <string name="start_button_pedometer">Start</string>
    <string name="pause_button_pedometer">Pause</string>
    <string name="finish_button_pedometer">Finish</string>
    <string name="sensitivity_bar_pedometer">Sensitivity</string>
    <string name="seek_bar_pedometer">Adjust Pedometer Sensitivity Using the Bar Below:</string>
	<string name="count_down_pedometer">Countdown Timer</string>
	<!--  Java   -->
    <string name="estimated_steps">Estimated Steps:</string>
    <string name="estimated_distance">Estimated Distance (meters):</string>
    <string name="estimated_calories">Estimated Calories Burned: </string>
    <string name="inturrupted_timer"> Inturrupted </string>
    <string name="pedometer_walker_title"> Walk Training</string>
    <string name="pedometer_runner_title"> Run Training</string>
    <string name="pedometer_weight_loss_title"> Weight Loss Program</string>
    <string name="minute_sound_check_box"> Minute Sound</string>
 	<string name="faster_sound_check_box"> Faster Sound</string>
 	<string name="completed_message"> Completed</string>
    
    <!--  WeightLossActivity   -->
    <!--  XML   -->
    <string name="weight_loss_message">Calories Consumed Today</string>
    <string name="weight_loss_get_recommendation">Get Recommendation</string>
    <string name="weight_loss_calories_to_burn">Calories to Burn</string>
    <string name="weight_loss_enter_activity">Enter Activity</string>
    <string name="weight_loss_exercise_time">Optional: Personalize how long you would like to take to complete the exercise (in minutes)</string>
    <string name="weight_loss_exercise_time_button">Adjust Exercise</string>
    <string name="weight_loss_exercise_option">Exercise Option</string>
    <!--  Java   -->
    <string name="low_calorie_message_start">For a healthy weight loss please consume over </string>
    <string name="low_calorie_message_end">calories daily. (Please consult a nutritionist if necessary) Only do these exercises when your consumption is over that number.</string>
    <string name="high_calorie_message">For possibility of maximum weight loss without body damage, please consume under 2500 calories daily. (Please consult a nutritionist if necessary)</string>
    <string name="default_calorie_message">By default it will be assumed your intake is of 2000 calories. (Please consult a nutritionist if necessary)</string>
    <string name="consume_more_calories_message">Please consume more calories.</string>
    <string name="weight_loss_distance">Distance: </string>
    <string name="weight_loss_distance_unit">km </string>
    <string name="weight_loss_time">Time: </string>
    <string name="weight_loss_time_unit"> minutes </string>
    
    <!--  ReportListViewActivity   -->
    <!--  XML   -->
    <string name="export_data_report">Export Data</string>
    <string name="current_records_report">Current Records:</string>
    <string name="illustrate_progress_button_report">Illustrate Progress</string>
    <!--  Java   -->
    <string name="toast_activity_date">Activity Date: </string>
    <string name="toast_activity_recommendation">Activity Recommendation: </string>
    <string name="toast_activity_distance">Activity Distance: </string>
    <string name="toast_activity_distance_unit"> meters </string>
    <string name="toast_activity_time">Activity Time: </string>
    <string name="toast_activity_time_unit"> minutes </string>
    <string name="toast_activity_average_velocity">Activity Average Velocity: </string>
    <string name="toast_activity_average_velocity_unit"> km/h </string>
    <string name="toast_activity_monitor">Monitor: </string>
    <string name="toast_activity_calories">Activity Calories: </string>
    <string name="record_distance">Record distance: </string>
    <string name="record_time">Record time: </string>
    <string name="record_average_velocity">Record average velocity: </string>
    <string name="record_calories">Record burned calories: </string>
    <string name="report_walker_title">Walk Training Report </string>
    <string name="report_runner_title">Run Training Report </string>
    <string name="report_weight_loss_title">Weight Loss Program Report</string>
    
    <!--  ReportMenuActivity   -->
    <!--  XML   -->
    <string name="select_report_menu">Please select the report you wish to view.</string>
    <string name="walker_report_menu">Walker</string>
    <string name="runner_report_menu">Runner</string>
    <string name="weight_loss_report_menu">Weight Loss</string>
    <!--  Java   -->
    <string name="report_menu_title">Report Menu</string>
    
    <!--  ViewGraphActivity   -->
    <!--  XML   -->
    <string name="distance_check_box">Distance</string>
    <string name="time_check_box">Time</string>
    <string name="velocity_check_box">Average Velocity</string>
    <string name="calories_check_box">Calories</string>
    <!--  Java   -->
    <string name="series_distance">Distance (meters)</string>
    <string name="series_time">Time (minutes)</string>
    <string name="series_velocity">Average Velocity (km/h)</string>
    <string name="series_calories">Calories Burned</string>
    <string name="chart_name">Improvement Chart</string>
	<string name="selected_series_distance">Distance</string>
    <string name="selected_series_time">Time</string>
    <string name="selected_series_velocity">Velocity</string>
    <string name="selected_series_calories">Calories</string>    
</resources>
